cluster/core/monitoring/prometheus/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  selector:
    app: prometheus
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
