cluster/core/monitoring/prometheus/resources/http-route-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  hostnames:
    - grafana.btkostner.network
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
