cluster/core/monitoring/prometheus/resources/http-route-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-http
  namespace: monitoring
spec:
  hostnames:
    - prometheus.btkostner.network
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
